--- a/product-dark.html
+++ b/product-dark.html
@@ -50,7 +50,7 @@
             </div>
             
         </section>
-        <br/>
+        <br>
         <section class="product-detail" style="display: flex; justify-content: space-between; align-items: center; gap: 20px;">
             <!-- Left Column: Product Details -->
             <div class="additional-info" style="flex: 1; text-align: left; padding: 15px; border: 1px solid #ccc; border-radius: 8px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); background-color: #f9f9f9;">
@@ -77,7 +77,7 @@
         <br>
         <section class="product-detail" style="display: flex; justify-content: space-between; align-items: center; gap: 20px;">
             <!-- Left Column: Product Details -->
-            <<div class="additional-info" style="flex: 1; text-align: left; padding: 15px; border: 1px solid #ccc; border-radius: 8px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); background-color: #f9f9f9;">
+            <div class="additional-info" style="flex: 1; text-align: left; padding: 15px; border: 1px solid #ccc; border-radius: 8px; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); background-color: #f9f9f9;">
                 <h2 style="color: #333; font-size: 1.5rem; margin-bottom: 10px;">Why You'll Love It</h2>
                 <ul style="list-style: disc; padding-left: 20px; line-height: 1.8; color: #555;">
                     <li><strong>70% cocoa content</strong> for a bold taste.</li>
